--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,48 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 
 }
 
-:root{
-    --primaria:#4f46e5;
-    --secundaria:#7c3aed;
-    --escuro:#0f172a;
-    --maisEscuro:#0a0f1c;
-    --claro:#e2e8f0;
-    --vidro:rgba(255, 255, 255, 0.1);
+:root {
+    --primaria: #4f46e5;
+    --secundaria: #7c3aed;
+    --escuro: #0f172a;
+    --maisEscuro: #0a0f1c;
+    --claro: #e2e8f0;
+    --vidro: rgba(255, 255, 255, 0.1);
 
 }
 
-body{
+body {
     background-color: var(--escuro);
     color: var(--claro);
 }
 
-.navegacao{
-    position:fixed;
-    top:0;
-    background:rgba(15, 23, 42, 0.8); 
+.navegacao {
+    position: fixed;
+    top: 0;
+    background: rgba(15, 23, 42, 0.8);
     width: 100%;
     z-index: 100;
-    padding: 1.5em; 
+    padding: 1.5em;
 }
 
-.menu{
+.menu {
     display: flex;
     justify-content: center;
     list-style: none;
     gap: 3rem;
 
 }
-.menu-link{
+
+.menu-link {
     text-decoration: none;
     color: var(--claro);
     font-weight: 500;
@@ -49,7 +50,7 @@ body{
     padding: 0.5rem 0;
 }
 
-.menu-link::after{
+.menu-link::after {
     content: '';
     position: absolute;
     width: 0;
@@ -59,12 +60,12 @@ body{
     left: 0;
 }
 
-.menu-link:hover::after{
+.menu-link:hover::after {
     width: 100%;
     transition: width 0.3s ease-in-out;
 }
 
-.cabecalho{
+.cabecalho {
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -73,10 +74,94 @@ body{
 
 }
 
-.foto-perfil{
+.foto-perfil {
     width: 350px;
     height: 350px;
-    box-shadow: 0 0 20px rgba(79,70,229, 0.3);
+    box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
     border-radius: 50%;
     border: 4px solid var(--vidro);
 }
+
+h1 {
+    font-size: 3.5rem;
+    color: var(--primaria);
+    font-weight: bold;
+    margin: 20px;
+}
+
+.cabecalho-sub-titulo {
+    font-size: 1.7rem;
+    color: var(--claro);
+}
+
+.sobre,
+.projetos {
+    padding: 6rem 2rem;
+}
+
+.sobre-titulo {
+    font-size: 3rem;
+    color: var(--claro);
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.sobre-caixa {
+    padding: 2rem;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 16px;
+    border: 1px solid var(--vidro);
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.sobre-paragrafo {
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+
+.projetos-titulo {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 60px;
+}
+
+.projetos-card:hover {
+    box-shadow: 0 10px 20px rgba(79, 70, 229, 0.2);
+    transform: translateY(-10px) scale(1.05);
+
+}
+
+
+.projetos-caixa {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.projetos-card {
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 16px;
+    backdrop-filter: blur(5px);
+    border: 1px solid var(--vidro);
+    overflow: hidden;
+    transition: all 0.5s ease; 
+    cursor: pointer;
+}
+
+.projetos-img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.info-projetos {
+    color: rgba(226, 232, 240, 0.8);
+    line-height: 1.25rem;
+}
+
+.paragrafo-projetos[]
