--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ h1 {
 }
 
 .sobre,
-.projetos {
+.projetos,.contatos {
     padding: 6rem 2rem;
 }
 
@@ -160,12 +160,68 @@ h1 {
 }
 
 .info-projetos {
-    color: rgba(226, 232, 240, 0.8);
-    line-height: 1.25rem;
+   margin-bottom: 5px;
 }
 
 .paragrafo-projetos{
+    color: rgba(226, 232, 240, 0.8);
+    line-height: 1.25rem;    
+}
+
+.caixa-textos-projeto{
+    padding: 1.5rem;
+}
+
+
+.contatos-titulo{
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 60px;
+}
+
+.formulario-contato{
+    max-width: 600px;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(5px);
+    padding: 2rem;
+    border: 1px solid var(--vidro);
+    border-radius: 16px;
+}
+
+
+
+.grupo-form{
+    margin-bottom: 1.5rem;
+}
+
+.campo-form{
+    width: 100%;
     padding: 1rem;
-    font-size: 1.1rem;
-    color: var(--claro);    
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 8px;
+    color: var(--claro);
+    border: 1px solid var(--vidro);
+    outline: none;
+}
+
+.campo-form:focus{
+    border-color: var(--secundaria);
+    box-shadow: 0 10px 20px rgba(79, 70, 229, 0.2);
+}
+
+.botao-form{
+    color: (var(--claro));
+    background: linear-gradient(45deg, var(--primaria), var(--secundaria));
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    width: 100%;
+    transition: all 0.5 ease;
+}
+.botao-form:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(79, 70, 229, 0.4);
 }
