--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body {
     box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
     border-radius: 50%;
     border: 4px solid var(--vidro);
+    animation: flutuar 5s ease-in-out infinite;
 }
 
 h1 {
@@ -95,7 +96,8 @@ h1 {
 }
 
 .sobre,
-.projetos,.contatos {
+.projetos,
+.contatos {
     padding: 6rem 2rem;
 }
 
@@ -149,7 +151,7 @@ h1 {
     backdrop-filter: blur(5px);
     border: 1px solid var(--vidro);
     overflow: hidden;
-    transition: all 0.5s ease; 
+    transition: all 0.5s ease;
     cursor: pointer;
 }
 
@@ -160,26 +162,26 @@ h1 {
 }
 
 .info-projetos {
-   margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
-.paragrafo-projetos{
+.paragrafo-projetos {
     color: rgba(226, 232, 240, 0.8);
-    line-height: 1.25rem;    
+    line-height: 1.25rem;
 }
 
-.caixa-textos-projeto{
+.caixa-textos-projeto {
     padding: 1.5rem;
 }
 
 
-.contatos-titulo{
+.contatos-titulo {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 60px;
 }
 
-.formulario-contato{
+.formulario-contato {
     max-width: 600px;
     margin: 0 auto;
     background: rgba(255, 255, 255, 0.05);
@@ -191,11 +193,11 @@ h1 {
 
 
 
-.grupo-form{
+.grupo-form {
     margin-bottom: 1.5rem;
 }
 
-.campo-form{
+.campo-form {
     width: 100%;
     padding: 1rem;
     background: rgba(255, 255, 255, 0.05);
@@ -205,12 +207,12 @@ h1 {
     outline: none;
 }
 
-.campo-form:focus{
+.campo-form:focus {
     border-color: var(--secundaria);
     box-shadow: 0 10px 20px rgba(79, 70, 229, 0.2);
 }
 
-.botao-form{
+.botao-form {
     color: (var(--claro));
     background: linear-gradient(45deg, var(--primaria), var(--secundaria));
     padding: 1rem 2rem;
@@ -221,7 +223,32 @@ h1 {
     width: 100%;
     transition: all 0.5 ease;
 }
-.botao-form:hover{
+
+.botao-form:hover {
     transform: translateY(-5px);
     box-shadow: 0 5px 15px rgba(79, 70, 229, 0.4);
+}
+
+.particulas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.5;
+    background: radial-gradient(circle at 10% 20%, var(--primaria)0%, transparent 20%),
+        radial-gradient(circle at 90% 80%, var(--secundaria) 0%, transparent 20%), var(--maisEscuro);
+    
+}
+
+@keyframes flutuar {
+    0%, 100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+    
 }
