--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ h1 {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 60px;
+    align-items: center;
 }
 
 .formulario-contato {
@@ -251,4 +252,22 @@ h1 {
         transform: translateY(-20px);
     }
     
+}
+
+.botao-projeto{
+    background: linear-gradient(45deg, var(--primaria), var(--secundaria));
+    color: var(--claro);
+    padding: 0.8rem 1.5rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    display: block;
+    margin: 1rem auto 0 auto;
+}
+
+.botao-projeto:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 25px 35px rgba(79, 70, 229, 0.4);
 }
